--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
 
     <!-- adress section-->
     <footer>
-        <a href="/"></a>
+        <a href="/">
         <img src="/images/WebStudio.svg" alt="logo">
-        <address>
+        <address></a>
         <div>г. Киев, пр-т Леси Украинки, 26</div>
         <div>info@example.com</div>
         <div>+38 099 111 11 11</div>
