--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
                 <li><a href=""></a>Портфолио</li>
                 <li><a href=""></a>Контакты</li>
             </ul>
-            
             <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
@@ -64,9 +63,9 @@
     <section>
         <h3>Чем мы занимаемся</h3>
         <ul>
-            <li><img src="/images/box1.jpg" width="370" alt="coding"></li>
-            <li><img src="/images/box2.jpg" width="370" alt="planning"></li>
-            <li><img src="/images/box3.jpg" width="370" alt="design"></li>
+            <li><img src="/images/box1.jpg" width="370" alt="кодинг"></li>
+            <li><img src="/images/box2.jpg" width="370" alt="Планирование"></li>
+            <li><img src="/images/box3.jpg" width="370" alt="дизайн"></li>
         </ul> 
     </section>
 
@@ -81,7 +80,7 @@
             </li>
 
             <li>
-                <img src="/images/photo2.jpg" width="270" alt="фото фронт ендера">
+                <img src="/images/photo2.jpg" width="270" alt="фото фрон-ендера">
                 <h4>Ольга Репина</h4>
                 <p>Frontend Developer</p>
             </li>
@@ -96,6 +95,7 @@
                 <img src="/images/photo4.jpg" width="270" alt="фото интерфейс дизайнера">
                 <h4>Михаил Ермаков</h4>
                 <p>UI Designer photo</p>
+                <div class="item-clas">Lorem ipsum dolor sit.</div>
             </li>
         </ul>
 
@@ -110,7 +110,7 @@
         </a>
         <address>
             г. Киев, пр-т Леси Украинки, 26<br>
-            info@example.com</br>
+            info@example.com <br>
             +38 099 111 11 11
         </address>
      </footer>
