--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <a href="/" class="logo">
-                <img src="/images/WebStudio.svg" alt="логотип">
+                <img src="./images/WebStudio.svg" alt="логотип">
  
             </a>
             
@@ -27,6 +27,8 @@
             </ul>
         </nav>
     </header>
+
+<p> panaearar</p>
 
 <!-- MAIN SECTION-->
 
@@ -106,7 +108,7 @@
 
     <footer class="footer">
         <a href="/">
-        <img src="/images/WebStudio.svg" alt="logo">
+        <img src="./images/WebStudio.svg" alt="logo">
         </a>
         <address class="footer-title">
             г. Киев, пр-т Леси Украинки, 26<br>
