--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <h3 class="section-title">Наша команда</h3>
         <ul>
             <li>
-                <img src="/images/photo1.jpg" width="270" alt="фото дизайнера">       
+                <img src="./images/photo1.jpg" width="270" alt="фото дизайнера">       
                 <h4 class="team-title" >Игорь Демьяненко</h4>
                 <p class="team-par">Product Designer</p>
             </li>
