--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <address>
             <ul class="footer-title">
                 <li>
-                    <a class="link" href="https://goo.gl/maps/xrUxvXRaoUCYZm5W7" target="_blank"
+                    <a class="link" href="/https://goo.gl/maps/xrUxvXRaoUCYZm5W7" target="_blank"
                         rel="noopener noreferrer">
                         г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
