--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <!-- HEADER-->
     <header>
         <nav>
-            <a href="/" class="logo">
+            <a href="./" class="logo">
                 <!-- <img src="./images/WebStudio.svg" alt="логотип"> -->
                 Web<span class="logo-color">Studio</span>
             </a>
 
             <ul class="side-nav">
-                <li><a class="link current" href=".">Студия</a></li>
+                <li><a class="link current" href="./">Студия</a></li>
                 <li><a class="link" href="./portfolio.html">Портфолио</a></li>
                 <li><a class="link" href="">Контакты</a></li>
             </ul>
@@ -117,14 +117,14 @@
     <!-- adress section-->
 
     <footer class="footer">
-        <a class="footer-logo" href="/">
+        <a class="footer-logo" href="./">
             Web<span class="footer-color">Studio</span>
             <!-- <img src="./images/WebStudio.svg" alt="logo"> -->
         </a>
         <address>
             <ul class="footer-title">
                 <li>
-                    <a class="link" href="/https://goo.gl/maps/xrUxvXRaoUCYZm5W7" target="_blank"
+                    <a class="link" href="https://goo.gl/maps/xrUxvXRaoUCYZm5W7" target="_blank"
                         rel="noopener noreferrer">
                         г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
